Update premium plan description text to be more clear about upcoming features

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="pricing-card-header">
                         <span class="plan-label">PREMIUM</span>
                         <h3 class="plan-price">Kommer snart</h3>
-                        <p class="plan-description">För dig som vill ha mer avancerade funktioner planerar vi att lansera en premiumversion i framtiden.</p>
+                        <p class="plan-description">För dig som vill ha fler avancerade funktioner planerar vi en premiumversion med följande funktioner:</p>
                     </div>
                     <div class="plan-features">
                         <h4>ALLT I BAS PLUS</h4>
