Update index.html with minor changes

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <li>Jämför listräntor och genomsnittsräntor</li>
                         </ul>
                     </div>
-                    <a href="#cta" class="button premium-notify">Meddela mig när det kommer</a>
+                    <a href="#cta" class="button premium-notify">Skriv upp mig på väntelistan</a>
                 </div>
             </div>
         </div>
